--- a/kitchen.yml
+++ b/kitchen.yml
@@ -1,9 +1,10 @@
 <%
-yum_dists_with_56 = %w(centos-6 centos-7 amazon-linux)
+yum_dists_with_56 = %w(centos-7 amazon-linux)
 suse_dists_with_56 = %w(opensuse-leap)
-yum_dists_with_57 = %w(centos-6 centos-7 fedora-28 fedora-latest)
+yum_dists_with_57 = %w(centos-7 fedora-28 fedora-latest)
 apt_dists_with_57 = %w(ubuntu-16.04 ubuntu-18.04)
 yum_dists_with_80 = %w(centos-7 centos-8 fedora-28 fedora-latest)
+apt_dists_with_80 = %w(ubuntu-20.04)
 %>
 ---
 driver:
@@ -19,7 +20,6 @@ verifier:
   name: inspec
 
 platforms:
-  - name: centos-6
   - name: centos-7
   - name: centos-8
   - name: debian-8
@@ -39,7 +39,7 @@ suites:
   #
   # client
   #
-  - name: yum-installation_client_package-56
+  - name: yum-client-install-56
     run_list:
       - recipe[selinux::disabled]
       - recipe[test::yum_repo]
@@ -49,7 +49,7 @@ suites:
         version: '5.6'
     includes: <%= yum_dists_with_56 %>
 
-  - name: suse-installation_client_package-56
+  - name: suse-client-install-56
     run_list:
       - recipe[test::yum_repo]
       - recipe[test::installation_client]
@@ -58,7 +58,15 @@ suites:
         version: '5.6'
     includes: <%= suse_dists_with_56 %>
 
-  - name: yum-installation_client_package-57
+  - name: client-install-57
+    run_list:
+      - recipe[test::installation_client]
+    attributes:
+      mysql_test:
+        version: '5.7'
+    includes: <%= apt_dists_with_57 %>
+
+  - name: yum-client-install-57
     run_list:
       - recipe[selinux::disabled]
       - recipe[test::yum_repo]
@@ -68,7 +76,7 @@ suites:
         version: '5.7'
     includes: <%= yum_dists_with_57 %>
 
-  - name: yum-installation_client_package-80
+  - name: yum-client-install-80
     run_list:
     - recipe[selinux::disabled]
     - recipe[test::yum_repo]
@@ -77,6 +85,14 @@ suites:
       mysql_test:
         version: '8.0'
     includes: <%= yum_dists_with_80 %>
+
+  - name: client-install-80
+    run_list:
+    - recipe[test::installation_client]
+    attributes:
+      mysql_test:
+        version: '8.0'
+    includes: <%= apt_dists_with_80 %>
 
   #
   # server smoke
