Add MySQL 8, Ubuntu 20.04 and EL8 support (#653)
* Add MySQL 8 support

Also removes Ubuntu 14.04 since it is EOL

Signed-off-by: Ethan Hampton <hamptone@osuosl.org>

* Add CentOS 8 to CI

Signed-off-by: Ethan Hampton <hamptone@osuosl.org>

* Add inspec and rspec tests to MySQL 8

Signed-off-by: Ethan Hampton <hamptone@osuosl.org>

* Make sure new tests are actually being run

Signed-off-by: Ethan Hampton <hamptone@osuosl.org>

* Remove EL6 & update tests

Signed-off-by: Ethan Hampton <hamptone@osuosl.org>

* Remove EL6 from spec tests

Signed-off-by: Ethan Hampton <hamptone@osuosl.org>

* Fix yaml indenting

Signed-off-by: Ethan Hampton <hamptone@osuosl.org>

* Fix enabled CI tests

Signed-off-by: Ethan Hampton <hamptone@osuosl.org>

* Wait for all servers for smoke test initialization

Signed-off-by: Ethan Hampton <hamptone@osuosl.org>

* Update changelog and readme

Signed-off-by: Ethan Hampton <hamptone@osuosl.org>

* Update changelog and readme

Signed-off-by: Ethan Hampton <hamptone@osuosl.org>

* Remove references to 5.1 & 5.5, update debian support

Signed-off-by: Ethan Hampton <hamptone@osuosl.org>

* README and dokken fixes

Signed-off-by: Ethan Hampton <hamptone@osuosl.org>

--- a/kitchen.dokken.yml
+++ b/kitchen.dokken.yml
@@ -23,13 +23,6 @@ platforms:
       image: dokken/amazonlinux-2
       pid_one_command: /usr/lib/systemd/systemd
 
-  - name: debian-8
-    driver:
-      image: dokken/debian-8
-      pid_one_command: /bin/systemd
-      intermediate_instructions:
-        - RUN /usr/bin/apt-get update
-
   - name: debian-9
     driver:
       image: dokken/debian-9
@@ -37,14 +30,21 @@ platforms:
       intermediate_instructions:
         - RUN /usr/bin/apt-get update
 
-  - name: centos-6
+  - name: debian-10
     driver:
-      image: dokken/centos-6
-      pid_one_command: /sbin/init
+      image: dokken/debian-10
+      pid_one_command: /bin/systemd
+      intermediate_instructions:
+        - RUN /usr/bin/apt-get update
 
   - name: centos-7
     driver:
       image: dokken/centos-7
+      pid_one_command: /usr/lib/systemd/systemd
+
+  - name: centos-8
+    driver:
+      image: dokken/centos-8
       pid_one_command: /usr/lib/systemd/systemd
 
   - name: fedora-latest
@@ -62,6 +62,13 @@ platforms:
   - name: ubuntu-18.04
     driver:
       image: dokken/ubuntu-18.04
+      pid_one_command: /bin/systemd
+      intermediate_instructions:
+        - RUN /usr/bin/apt-get update
+
+  - name: ubuntu-20.04
+    driver:
+      image: dokken/ubuntu-20.04
       pid_one_command: /bin/systemd
       intermediate_instructions:
         - RUN /usr/bin/apt-get update
