--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,11 +41,32 @@ jobs:
       matrix:
         os:
           - 'centos-7'
+          - 'centos-8'
           - 'ubuntu-1604'
           - 'ubuntu-1804'
+          - 'ubuntu-2004'
         suite:
-          - 'installation-client-package-57'
+          - 'client-install-57'
+          - 'client-install-80'
           - 'smoke57'
+          - 'smoke80'
+        exclude:
+          - os: centos-8
+            suite: client-install-57
+          - os: centos-8
+            suite: smoke57
+          - os: ubuntu-1604
+            suite: client-install-80
+          - os: ubuntu-1604
+            suite: smoke80
+          - os: ubuntu-1804
+            suite: client-install-80
+          - os: ubuntu-1804
+            suite: smoke80
+          - os: ubuntu-2004
+            suite: client-install-57
+          - os: ubuntu-2004
+            suite: smoke57
       fail-fast: false
 
     steps:
