--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,23 +50,33 @@ jobs:
           - 'client-install-80'
           - 'smoke57'
           - 'smoke80'
+          - 'resources-57'
+          - 'resources-80'
         exclude:
           - os: centos-8
             suite: client-install-57
           - os: centos-8
             suite: smoke57
+          - os: centos-8
+            suite: resources-57
           - os: ubuntu-1604
             suite: client-install-80
           - os: ubuntu-1604
             suite: smoke80
+          - os: ubuntu-1604
+            suite: resources-80
           - os: ubuntu-1804
             suite: client-install-80
           - os: ubuntu-1804
             suite: smoke80
+          - os: ubuntu-1804
+            suite: resources-80
           - os: ubuntu-2004
             suite: client-install-57
           - os: ubuntu-2004
             suite: smoke57
+          - os: ubuntu-2004
+            suite: resources-57
       fail-fast: false
 
     steps:
