feat: add support for ubuntu 24.04
Signed-off-by: Tom Krouper <tom.krouper@shopify.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,7 @@ jobs:
           - "ubuntu-1804"
           - "ubuntu-2004"
           - "ubuntu-2204"
+          - "ubuntu-2404"
         suite:
           - "client-install-57"
           - "client-install-80"
@@ -67,6 +68,12 @@ jobs:
           - os: ubuntu-2204
             suite: smoke57
           - os: ubuntu-2204
+            suite: resources-57
+          - os: ubuntu-2404
+            suite: client-install-57
+          - os: ubuntu-2404
+            suite: smoke57
+          - os: ubuntu-2404
             suite: resources-57
           - os: rockylinux-8
             suite: client-install-57
